--- a/ml1/lesson5-nlp.ipynb
+++ b/ml1/lesson5-nlp.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aclImdb_v1.tar.gz  imdbEr.txt  imdb.vocab  \u001b[0m\u001b[01;34mmodels\u001b[0m/  README  \u001b[01;34mtest\u001b[0m/  \u001b[01;34mtmp\u001b[0m/  \u001b[01;34mtrain\u001b[0m/\r\n"
+      "aclImdb_v1.tar.gz  imdbEr.txt  imdb.vocab  \u001b[0m\u001b[01;34mmodels\u001b[0m/  README  \u001b[01;34mtest\u001b[0m/  \u001b[01;34mtmp\u001b[0m/  \u001b[01;34mtrain\u001b[0m/\n"
      ]
     }
    ],
@@ -88,8 +88,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[01;34maclImdb\u001b[0m/  \u001b[01;34mall_val\u001b[0m/         \u001b[01;34mneg\u001b[0m/  \u001b[01;34mtmp\u001b[0m/    unsupBow.feat  urls_pos.txt\r\n",
-      "\u001b[01;34mall\u001b[0m/      labeledBow.feat  \u001b[01;34mpos\u001b[0m/  \u001b[01;34munsup\u001b[0m/  urls_neg.txt   urls_unsup.txt\r\n"
+      "\u001b[0m\u001b[01;34maclImdb\u001b[0m/  \u001b[01;34mall_val\u001b[0m/         \u001b[01;34mneg\u001b[0m/  \u001b[01;34mtmp\u001b[0m/    unsupBow.feat  urls_pos.txt\n",
+      "\u001b[01;34mall\u001b[0m/      labeledBow.feat  \u001b[01;34mpos\u001b[0m/  \u001b[01;34munsup\u001b[0m/  urls_neg.txt   urls_unsup.txt\n"
      ]
     }
    ],
@@ -106,17 +106,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0_9.txt\r\n",
-      "10000_8.txt\r\n",
-      "10001_10.txt\r\n",
-      "10002_7.txt\r\n",
-      "10003_8.txt\r\n",
-      "10004_8.txt\r\n",
-      "10005_7.txt\r\n",
-      "10006_7.txt\r\n",
-      "10007_7.txt\r\n",
-      "10008_7.txt\r\n",
-      "ls: write error\r\n"
+      "0_9.txt\n",
+      "10000_8.txt\n",
+      "10001_10.txt\n",
+      "10002_7.txt\n",
+      "10003_8.txt\n",
+      "10004_8.txt\n",
+      "10005_7.txt\n",
+      "10006_7.txt\n",
+      "10007_7.txt\n",
+      "10008_7.txt\n",
+      "ls: write error\n"
      ]
     }
    ],
@@ -1041,8 +1041,20 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
